--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -123,6 +123,7 @@
 		padding: 0.2rem 1.2rem;
 		border-radius: 2px;
 		font-size: 1rem;
+		color: var(--text-light);
 
 		display: flex;
 		min-width: 2rem;
